name:                mqtt-log
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://www.github.com/bgamari/mqtt-log
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2018 Ben Gamari
category:            Database
build-type:          Simple
cabal-version:       >=1.10

executable mqtt-log
  main-is:             Main.hs
  other-modules:       MqttLog
  ghc-options:         -threaded
  build-depends:       base >=4.10 && <4.12,
                       async,
                       text >= 1.2,
                       stm,
                       time,
                       bytestring >= 0.10,
                       beam-core,
                       beam-sqlite,
                       sqlite-simple,
                       mqtt-hs,
                       optparse-applicative >= 0.14
  default-language:    Haskell2010
